--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+/* General Settings */
 * {
     font-family: roboto; 
 }
@@ -11,7 +13,8 @@ body {
 }
 */
 
-
+/* Header: */
+/* ** Header General */
 .header {
     display: flex;
     background-color: #1F2937;
@@ -19,7 +22,7 @@ body {
 }
 
 
-
+/* ** Logo settings */
 .logo-cont {
     display: flex;
     flex: 1;
@@ -32,7 +35,7 @@ body {
 }
 
 
-
+/* ** Button Settings */
 .btn-cont {
     display: flex;
     font-size: 18px;
