--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ body {
 .main-hero {
     display: flex;
     background-color: #1F2937;
+    
 }
 
 
@@ -89,7 +90,6 @@ body {
     flex-direction: column;
     margin-left: 10%;
     margin-bottom: 5%;
-    align-items: center;
     flex: 1;
 }
 
@@ -102,6 +102,10 @@ body {
 .subhero {
     font-size: 18px;
     color: #e5e7eb;
+}
+
+.sign-cont {
+    display: flex;
 }
 
 .sign-in {
