--- a/style.css
+++ b/style.css
@@ -73,13 +73,11 @@ body {
 
 
 
-
 /* Hero: */
 /* ** General Setting:*/
 .main-hero {
     display: flex;
-    background-color: #1F2937;
-    
+    background-color: #1F2937;   
 }
 
 
@@ -139,6 +137,51 @@ body {
     width: 50%;
 }
 
+
+
+
+
+/*Information:*/
+/* ** General Setting:*/
+.main-info {
+    display: flex;
+    flex-direction: column;
+}
+
+
+/* ** Information Header:*/
+.info-cont {
+    display: flex;
+    margin-left: 10%;
+    margin-right: 10%;
+    flex: 1;
+    justify-content: center;
+}
+
+.info-head {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+
+
+/* ** Pictures:*/
+.img-cont {
+    margin-left: 10%;
+    margin-right: 10%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.img0 {
+    flex-basis: 200px;
+}
+
+.img1, .img2, .img3, .img4 {
+    flex-basis: 200px;
+    flex-shrink: 1;
+}
 
 
 
