added frame for footer

--- a/style.css
+++ b/style.css
@@ -311,6 +311,19 @@ body {
 
 
 
+
+/*Footer:*/
+/* ** General Settings:*/
+
+
+
+
+/* ** Text:*/
+
+
+
+
+
 a:link, a:visited {
     text-decoration: none;
 }
